--- a/templates/includes/nav.haml
+++ b/templates/includes/nav.haml
@@ -3,249 +3,15 @@
 -compress css inline
   {% lessblock %}
     :plain
-
-      #menu {
-        display: flex;
-        flex-direction: row;
-        align-items: flex-end;
-        margin-top:-80px;
-        min-height:81px;
-        padding-bottom:15px;
-
-        .submenu {
-          display: flex;
-          flex-direction: column;
-          padding-top: 15px;
-
-          a {
-            width: 28px;
-            margin: auto;
-            .circle {
-              color: var(--color-primary-dark);
-              border-color: var(--color-primary-dark);
-              height: 28px;
-              width: 28px;
-              border-width: 2px;
-
-              div {
-                height: 14px;
-                width: 14px;
-                font-size: 14px;
-              }
-            }
-
-            .title {
-              color: var(--color-primary-dark);
-              margin-bottom: 10px;
-              font-size: 11px;
-              
-            }
-
-            &:hover {
-              .circle {
-                background: var(--color-primary-dark);
-                color: #fff;
-              }
-            }
-          }
-        }
-
-        .more {
-          .icon-menu-4 {
-            width: 15px;
-            margin-left: 0px;
-            margin-right: 30px;
-            margin-top:-60px;
-            font-size: 36px;
-            color: var(--color-nav-unselected);
-          }
-        }
-      
-        a {
-          width: 75px;
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          text-decoration: none;
-          border: 0px solid red;
-          text-align: center;
-
-          &:hover, &.active{
-            text-decoration: none;
-            .circle {
-              background: var(--color-nav-selected-bg);
-              color: var(--color-nav-selected-text);
-            }
-          }
-
-          .title {
-            font-size: 12px;
-            letter-spacing: 0.05em;
-            margin-top: 3px;
-            font-weight: 400;
-            color: var(--color-nav-unselected);
-          }
-
-          .circle {
-
-            div {
-              border: 0px solid red;
-              width: 18px;
-              height: 20px;
-              text-align: center;
-              margin: 0;
-            }
-
-            .icon-3 {
-              font-size: 17px;
-              width: 16px;
-              height: 20px;
-            }
-
-            .icon-2 {
-              font-size: 15px;
-              width: 14px;
-              height: 12px;
-            }
-
-            .icon-1 {
-              font-size: 14px;
-              width: 14px;
-              height: 14px;
-            }
-
-            width: 32px;
-            height: 32px;
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            align-items: center;
-            font-size:19px;
-            background: transparent;
-            color: var(--color-nav-unselected);
-            border-radius: 50%;
-            border: 3px solid var(--color-nav-unselected);
-            transition: all 150ms linear;
-          }
-        }
+      #sign-in-button {
+        --button-bg: rgba(0,0,0,.1);
+        --color-button-primary: rgba(0,0,0,.1);
       }
+
   {% endlessblock %}
 
 #menu
   .flex-grow
-  -if org_perms.msgs.msg_list and not request.user.is_superuser
-    %a{href:"{% url 'msgs.msg_inbox' %}", class:"{% active request 'inbox|outbox|broadcast|call|msg/filter|msg/flow|msg/archived|failed' %}"}
-      .circle
-        .icon-bubble-3.icon-2
-      .title 
-        -trans "messages"
+  %temba-button.block#sign-in-button(href="{% ssl_brand_url 'users.user_check_login' %}" name="Sign In")
+    Sign In
 
-  -if org_perms.contacts.contact_list and not request.user.is_superuser
-    %a{href:"{% url 'contacts.contact_list' %}", class:"{% active request 'contact|imports' %}"}
-      .circle
-        .icon-contact
-      .title 
-        -trans "contacts"
-
-  -if org_perms.flows.flow_list and not request.user.is_superuser
-    %a{href:"{% url 'flows.flow_list' %}", class:"{% active request '(?<!msg)/flow' %}"}
-      .circle
-        .icon-flow.icon-3
-      .title 
-        -trans "flows"
-
-  -if org_perms.campaigns.campaign_list and not request.user.is_superuser
-    %a{href:"{% url 'campaigns.campaign_list' %}", class:"{% active request 'campaign' %}"}
-      .circle
-        .icon-campaign
-      .title
-        -trans "campaigns"
-
-  -if org_perms.triggers.trigger_list and not request.user.is_superuser
-    %a{href:"{% url 'triggers.trigger_list' %}", class:"{% active request 'trigger' %}"}
-      .circle
-        .icon-feed
-      .title
-        -trans "triggers"
-
-  -if org_perms.tickets.ticket_list and not request.user.is_superuser
-    %a{href:"{% url 'tickets.ticket_list' %}", class:"{% active request 'ticket' %}"}
-      .circle
-        .icon-ticket
-      .title
-        -trans "tickets"
-
-  -if request.user.is_staff
-    -if not user_org
-      %a{href:"{% url 'orgs.user_list' %}", class:"{% active request 'users' %}"}
-        .circle
-          .icon-users-2.icon-3
-        .title
-          -trans "users"
-
-  -if request.user.is_staff
-    -if not user_org
-      %a{href:"{% url 'orgs.org_manage' %}", class:"{% active request 'org' %}"}
-        .circle
-          .icon-office.icon-2
-        .title
-          -trans "workspaces"
-
-  -if request.user.is_staff or perms.apks.apk_list
-    %a{href:"{% url 'apks.apk_list' %}", class:"{% active request 'apk' %}"}
-      .circle
-        .icon-channel-android
-      .title
-        -trans "android"
-
-  -if request.user.is_staff or perms.orgs.org_dashboard
-    %a{href:"{% url 'dashboard.dashboard_home' %}", class:"{% active request 'dashboard(?!/flows)' %}"}
-      .circle
-        .icon-bars-3.icon-1
-      .title
-        -trans "dashboard"
-
-  -if not request.user.is_anonymous
-    .more
-      %a.icon-menu-4{href:""}
-      .submenu-container.hide
-        .submenu
-
-          -block loggedin-submenu
-
-          -if request.user.is_staff
-            -if user_org
-              %a{href:"{% url 'orgs.user_list' %}", class:"{% active request 'users' %}"}
-                .circle
-                  .icon-users-2
-                .title
-                  -trans "users"
-
-          -if request.user.is_staff
-            -if user_org
-              %a{href:"{% url 'orgs.org_manage' %}", class:"{% active request 'org' %}"}
-                .circle
-                  .icon-office
-                .title
-                  -trans "orgs"
-
-          -if request.user.is_staff and user_org
-            %a.posterize{href:"{% url 'orgs.org_service' %}"}
-              .circle
-                .icon-exit
-              .title
-                -trans "end"
-          -else
-            %a(href="{% url 'users.user_logout' %}?next=/users/login")
-              .circle
-                .icon-exit
-              .title.whitespace-nowrap
-                -trans "sign out"
-  -else
-    -block temba-login
-
-    %a{href:"{% ssl_brand_url 'users.user_check_login' %}"}
-      .circle
-        .icon-user
-      .title
-        -trans "sign in"
