Tweak sub orgs table empty case

--- a/templates/orgs/org_sub_orgs_spa.haml
+++ b/templates/orgs/org_sub_orgs_spa.haml
@@ -78,7 +78,6 @@
                 %temba-icon(name="delete_small" clickable="true" linked="true" onclick='showDelete({{org.id}})')
         -empty
           %tr.empty_list
-            -for field in fields
-              %td
+            %td(colspan=5)
 
 -block extra-rows
